--- a/MobileApp/Base.lproj/Main.storyboard
+++ b/MobileApp/Base.lproj/Main.storyboard
@@ -90,6 +90,9 @@
                                                     <constraint firstAttribute="height" constant="40" id="xSW-Eu-ACb"/>
                                                 </constraints>
                                                 <state key="normal" title="Button" image="LIGAR"/>
+                                                <connections>
+                                                    <action selector="realizarLigacao:" destination="G7Z-c5-dBP" eventType="touchUpInside" id="TnQ-vp-4FH"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S7J-4E-GHg">
                                                 <rect key="frame" x="69" y="0.0" width="59" height="40"/>
@@ -97,6 +100,9 @@
                                                     <constraint firstAttribute="height" constant="40" id="eTr-Lf-5qQ"/>
                                                 </constraints>
                                                 <state key="normal" title="Button" image="SERVIÇOS"/>
+                                                <connections>
+                                                    <segue destination="EvZ-D9-6OW" kind="show" id="Nal-hz-pAa"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dpI-t2-sPT">
                                                 <rect key="frame" x="138" y="0.0" width="59" height="40"/>
@@ -188,6 +194,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fS1-gP-Z8b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2112.8000000000002" y="792.95352323838085"/>
+        </scene>
+        <!--Servicos View Controller-->
+        <scene sceneID="x2v-o4-Ho1">
+            <objects>
+                <viewController id="EvZ-D9-6OW" customClass="ServicosViewController" customModule="MobileApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9J1-T3-Jec"/>
+                        <viewControllerLayoutGuide type="bottom" id="ipQ-Gi-3OF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hTL-al-vcY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6y2-rg-SkM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2887" y="793"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="oc8-tE-5eh">
